--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,10 @@ android {
 }
 
 dependencies {
-
+    def camerax_version = "1.0.0-beta07"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation "androidx.camera:camera-view:1.0.0-alpha14"
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
